[gd_scene load_steps=8 format=3 uid="uid://bq3yspobg0aja"]

[ext_resource type="Script" uid="uid://b5jcdd6opr5su" path="res://Sripts/resulte.gd" id="1_pncfa"]
[ext_resource type="Shader" uid="uid://cfcg66o651kat" path="res://Sripts/resulte.gdshader" id="2_vkt1f"]
[ext_resource type="Texture2D" uid="uid://cyfic7fyf7e0u" path="res://AmbientCG/Downloads/Bricks0602K-PNG/Bricks060_2K-PNG_NormalGL.png" id="3_fh8hk"]
[ext_resource type="Texture2D" uid="uid://cy73otty3wh5e" path="res://AmbientCG/Downloads/Bricks0602K-PNG/Bricks060_2K-PNG_AmbientOcclusion.png" id="4_xl45x"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fh8hk"]
shader = ExtResource("2_vkt1f")
shader_parameter/pattern_texture = ExtResource("4_xl45x")
shader_parameter/normal_texture = ExtResource("3_fh8hk")
shader_parameter/texture_scale = 200.0
shader_parameter/base_color = Color(1, 0.8, 0.1, 1)
shader_parameter/contrast = 1.0
shader_parameter/multiplier = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_715xp"]
shader = ExtResource("2_vkt1f")
shader_parameter/pattern_texture = ExtResource("4_xl45x")
shader_parameter/normal_texture = ExtResource("3_fh8hk")
shader_parameter/texture_scale = 200.0
shader_parameter/base_color = Color(0.85, 0.85, 0.9, 1)
shader_parameter/contrast = 1.0
shader_parameter/multiplier = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x5yp0"]
shader = ExtResource("2_vkt1f")
shader_parameter/pattern_texture = ExtResource("4_xl45x")
shader_parameter/normal_texture = ExtResource("3_fh8hk")
shader_parameter/texture_scale = 200.0
shader_parameter/base_color = Color(0.7, 0.45, 0.25, 1)
shader_parameter/contrast = 1.0
shader_parameter/multiplier = 1.0

[node name="result" type="Node2D"]
script = ExtResource("1_pncfa")

[node name="podium1" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_fh8hk")
offset_left = 294.0
offset_top = 294.0
offset_right = 458.0
offset_bottom = 534.0

[node name="Label" type="Label" parent="podium1"]
layout_mode = 0
offset_left = 61.0
offset_top = 94.0
offset_right = 100.0
offset_bottom = 177.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "1"

[node name="podium2" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_715xp")
offset_left = 453.0
offset_top = 190.0
offset_right = 617.0
offset_bottom = 534.0

[node name="Label" type="Label" parent="podium2"]
layout_mode = 0
offset_left = 61.0
offset_top = 196.0
offset_right = 100.0
offset_bottom = 279.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "2"

[node name="podium3" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_x5yp0")
offset_left = 616.0
offset_top = 328.0
offset_right = 780.0
offset_bottom = 531.0

[node name="Label" type="Label" parent="podium3"]
layout_mode = 0
offset_left = 61.0
offset_top = 59.0
offset_right = 100.0
offset_bottom = 142.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "3"

[node name="bnt_next" type="Button" parent="."]
offset_left = 1066.0
offset_top = 561.0
offset_right = 1116.0
offset_bottom = 611.0
text = "Next"

[connection signal="pressed" from="bnt_next" to="." method="_on_bnt_next_pressed"]
